Implemented all requirements for Sprint1
